--- a/_config_bak.yml
+++ b/_config_bak.yml
@@ -7,18 +7,18 @@ version: 2.0.1
 
 # Header
 menu:
-  - page: home
+  - page: Home
     directory: .
     icon: fa-home
-  - page: archive
+  - page: Archive
     directory: archives/
     icon: fa-archive
-  - page: about
+  - page: About
     directory: about/
     icon: fa-user
-  - page: rss
-    directory: atom.xml
-    icon: fa-rss
+    #- page: rss
+    #directory: atom.xml
+    #icon: fa-rss
 
 # Sidebar
 widgets:
@@ -77,34 +77,27 @@ comment:
     appid: ## 畅言(appid)
     appkey: ##畅言(appkey)
 
-#Share
-#baidu_share: true ## 百度分享
-#JiaThis_share: ##true ##JiaThis分享
-#duoshuo_share: #true ##true 多说分享必须和多说评论一起使用。
-#addToAny_share: # AddToAny share. Empty list hides. List items are service name at url. For ex: email for '<a href="https://www.addtoany.com/add_to/email?linkurl=...'
-#  - twitter
-#  - baidu
-#  - facebook
-#  - google_plus
-#  - linkedin
-#  - email
-
 # Analytics
-#google_analytics: ## Your Google Analytics tracking id, e.g. UA-42025684-2
-#baidu_analytics: ## Your Baidu Analytics tracking id, e.g. 1006843030519956000
+# google_analytics: ## Your Google Analytics tracking id, e.g. UA-42025684-2
+# baidu_analytics: ## Your Baidu Analytics tracking id, e.g. 1006843030519956000
 
 # Miscellaneous
 show_category_count: true ## If you want to show the count of categories in the sidebar widget please set the value to true.
-widgets_on_small_screens: true ## Set to true to enable widgets on small screens.
+widgets_on_small_screens: false ## Set to true to enable widgets on small screens.
 busuanzi: true ## If you want to use Busuanzi page views please set the value to true.
+
+# About page
+about:
+  photo_url:
+  items:
+  - label: email
+    url: ## Your email with mailto: e.g.  mailto:zhenggchaoo@gmail.com
+    title: ## Your email e.g.  zhenggchaoo@gmail.com
+  - label: github
+    url: https://github.com/wudaijun
+    title: wudaijun
 
 # Links widget. Empty links will hide widget.
 links:
-  - title: site-name1
-    url: http://www.example1.com/
-  - title: site-name2
-    url: http://www.example2.com/
-  - title: site-name3
-
-cdn:
-  mathjax: https://cdn.mathjax.org
+    #- title: site-name1
+    #url: http://www.example1.com/
