--- a/_config.yml
+++ b/_config.yml
@@ -69,9 +69,9 @@ local_search: true ## Use a javascript-based local search engine, true/false.
 #Cmments
 comment:
   duoshuo: #chaooo ## duoshuo_shortname
-  disqus: wudaijun
-  livere: ## 来必力(data-uid)
-  uyan: ## 友言(uid)
+  disqus: # wudaijun
+  livere: MTAyMC8zMzg3Ni8xMDQyOQ== ## 来必力(data-uid)
+  uyan: ## 2157109 ## 友言(uid)
   cloudTie: ## 网易云跟帖(productKey)
   changyan: ## 畅言需在下方配置两个参数，此处不填。
     appid: ## 畅言(appid)
